# HabitVoiceAgent

./: .dockerignore  .env.production.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
agent/: Dockerfile  calendar_client.py  docker-entrypoint.sh  draft_schedule.json  habit_plan.json  main.py  pyproject.toml  test_calendar.py
frontend/: Dockerfile
frontend/app/: layout.tsx  page.tsx
frontend/app/api/auth/callback/: route.ts
frontend/app/api/auth/login/: route.ts
frontend/app/api/auth/status/: route.ts
frontend/app/api/token/: route.ts
frontend/app/components/: DraftCalendar.tsx
frontend/app/lib/: crypto.ts
